--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,15 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
+        android:launchMode="singleTask"
+        android:screenOrientation="landscape"
+        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="Main"
-            android:label="@string/app_name">
+            android:name=".activity.MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,10 +31,10 @@
         </activity>
 
         <activity
-            android:name="MotorScan"
+            android:name=".activity.MotorScanActivity"
             android:screenOrientation="landscape"
             android:configChanges="orientation"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+            android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
     </application>
